<resources>
    <string name="app_name">ChatApp</string>
    <string name="str_loading">Loading</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="error_unsupportedfile">Please install related application for view file</string>
    <string name="label_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="lbl_signin">Sign in</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="label_new_signup">New Signup</string>
    <string name="labrl_signup_with_google">Signup with Google +</string>
    <string name="label_or">OR</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="lbl_login_with_facebook">Login with facebook</string>
    <string name="lbl_viewmore">View More</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_about_me">About Me</string>
    <string name="lbl_relationship">Relationship</string>
    <string name="lbl_faith">Faith</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_natioanlity">Natioanlity</string>
    <string name="lbl_summary">Summary</string>
    <string name="lbl_interest">Interest</string>
    <string name="alert_permision_need">Permision are needed</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_my_current_location">My Current Location</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_other_location">Other Location</string>
    <string name="page_setting">Setting</string>
    <string name="page_select_location">Select Location</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_skip">Skip</string>

    <!--fonts-->
    <string name="font_OpenSans_Bold">OpenSans-Bold</string>
    <string name="font_OpenSans_BoldItalic">OpenSans-BoldItalic</string>
    <string name="font_OpenSans_ExtraBold">OpenSans-ExtraBold</string>
    <string name="font_OpenSans_ExtraBoldItalic">OpenSans-ExtraBoldItalic</string>
    <string name="font_OpenSans_Italic">OpenSans-Italic</string>
    <string name="font_OpenSans_Light">OpenSans-Light</string>
    <string name="font_OpenSans_LightItalic">OpenSans-LightItalic</string>
    <string name="font_OpenSans_Regular">OpenSans-Regular</string>
    <string name="font_OpenSans_Semibold">OpenSans-Semibold</string>
    <string name="font_OpenSans_SemiboldItalic">OpenSans-SemiboldItalic</string>


    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;Tutorial Screen&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="prev">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string-array name="imagesForOnboarding">
        <item>@drawable/walkthrough1</item>
        <item>@drawable/walkthrough2</item>
        <item>@drawable/walkthrough3</item>
        <item>@drawable/walkthrough4</item>
        <item>@drawable/walkthrough5</item>
    </string-array>

    <string-array name="titlesForOnboarding">
        <item>Collect Points &amp; Unlock Badges!</item>
        <item>Collect Points &amp; Unlock Badges!</item>
        <item>Collect Points &amp; Unlock Badges!</item>
        <item>Collect Points &amp; Unlock Badges!</item>
        <item>Collect Points &amp; Unlock Badges!</item>
    </string-array>

    <string-array name="messagesForOnboarding">
        <item>Participate in the various activities to unlock badges of different categories</item>
        <item>Participate in the various activities to unlock badges of different categories</item>
        <item>Participate in the various activities to unlock badges of different categories</item>
        <item>Participate in the various activities to unlock badges of different categories</item>
        <item>Participate in the various activities to unlock badges of different categories</item>
    </string-array>


    <integer-array name="colorsForOnboarding">
        <item>@color/color1</item>
        <item>@color/color2</item>
        <item>@color/color3</item>
        <item>@color/color4</item>
        <item>@color/color5</item>
        <item>@color/color6</item>
    </integer-array>


    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="dummy_text">Test</string>
    <string name="dummy_fab">Fab Test</string>

    <string name="reset">Reset stack</string>
    <string name="stack_reset">Stack reset!</string>
    <string name="stack_empty">Card stack empty!</string>
    <string name="github">View on GitHub</string>
    <string name="pacv_default_history_file_name">pacv_history.json</string>
    <string name="title_selectlocation">Select Location</string>
    <string name="default_selectlocation">Select Location</string>
    <string name="screen_settings">Settings</string>
    <string name="lbl_capture_image">Capture Image</string>
    <string name="lbl_pick_image">Pick Image</string>
    <string name="screen_editprofile">Edit Profile</string>
    <string name="alret_permision_need">Permission i needed to perform action</string>
    <string name="lbl_current_job">Current Job</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_control_profile">Control Profile</string>
    <string name="lbl_add_interest">Add Interest</string>

    <!--Crop Image-->
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="screen_profile">Profile</string>
    <string name="label_dob">DOB</string>
    <string name="lblmale">Male</string>
    <string name="lblfemale">Female</string>
    <string name="alert_internet">Please Check Internet Connection</string>
</resources>
