<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/activity_register_img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back" />

    <com.chatapp.common.CustomTextView

        android:id="@+id/customTextView"
        style="@style/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/lbl_signup"
        app:font="@string/font_OpenSans_Light"></com.chatapp.common.CustomTextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_register_ti_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/activity_register_et_name"
            style="@style/normal_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:font="@string/font_OpenSans_Light"
            tools:text="" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_register_ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/activity_register_et_email"
            style="@style/normal_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:font="@string/font_OpenSans_Light"
            tools:text="" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_register_ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/activity_register_et_password"
            style="@style/normal_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textEmailAddress"
            app:font="@string/font_OpenSans_Light"
            tools:text="" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_register_ti_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/activity_register_et_dob"
            style="@style/normal_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/label_dob"
            android:inputType="textEmailAddress"
            app:font="@string/font_OpenSans_Light"
            tools:text="" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/activity_register_rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_setting_tv_distance_unit"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_register_rb_male"
            style="@style/setting_normal_black_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:checked="true"
            android:text="@string/lblmale"
            app:font="@string/font_OpenSans_Semibold" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_register_rb_female"
            style="@style/setting_normal_black_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/lblfemale"
            app:font="@string/font_OpenSans_Semibold" />
    </RadioGroup>

    <com.chatapp.common.CustomButton
        android:id="@+id/activity_register_btn_signup"
        style="@style/bluebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/lbl_signup"
        app:font="@string/font_OpenSans_Regular" />

</LinearLayout>