<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <com.chatapp.common.CustomButton
        android:id="@+id/dialog_attacimage_captureimage"
        style="@style/greybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/lbl_capture_image"
        app:font="@string/font_OpenSans_Regular" />

    <com.chatapp.common.CustomButton
        android:id="@+id/dialog_attacimage_btn_pickimage"
        style="@style/greybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/lbl_pick_image"
        app:font="@string/font_OpenSans_Regular" />
</LinearLayout>