<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <com.chatapp.common.CustomTextView
        style="@style/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/label_sign_in"></com.chatapp.common.CustomTextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_ti_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:theme="@style/TextLabel">

        <EditText
            style="@style/normal_edittext"
            android:id="@+id/activity_login_et_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            app:font="@string/font_OpenSans_Light"
            tools:text="sdlskdlksldksldlsdklsdkls" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_ti_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:theme="@style/TextLabel">

        <EditText
            style="@style/normal_edittext"
            android:id="@+id/activity_login_et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:font="@string/font_OpenSans_Light"
            tools:text="sdlskdlksldksldlsdklsdkls" />

    </android.support.design.widget.TextInputLayout>

    <com.chatapp.common.CustomTextView
        android:id="@+id/activity_login_tv_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="right"
        android:text="@string/lbl_forgot_password"
        android:textColor="#3d4254"
        android:textSize="@dimen/_12sdp"
        app:font="@string/font_OpenSans_Regular" />

    <com.chatapp.common.CustomButton
        android:id="@+id/activity_login_btn_signin"
        style="@style/bluebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/lbl_signin"
        app:font="@string/font_OpenSans_Regular" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <View
            android:layout_width="@dimen/_70sdp"
            android:layout_height="0.5dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/activity_login_view"
            android:background="@color/dark_grey"></View>

        <com.chatapp.common.CustomTextView
            android:id="@+id/activity_login_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="right"
            android:padding="@dimen/_5sdp"
            android:text="@string/label_or"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_70sdp"
            android:layout_height="0.5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/activity_login_view"
            android:background="@color/dark_grey"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_login_rl_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_welcome_tv_login_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/drawble_fb_bg_round"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_30sdp"
            android:src="@drawable/ic_facebook" />

        <com.chatapp.common.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="right"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_login_with_facebook"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:font="@string/font_OpenSans_Regular" />


    </RelativeLayout>

    <!--<com.chatapp.common.CustomButton-->
    <!--android:id="@+id/activity_login_btn_signup_google"-->
    <!--style="@style/pinkbutton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/_10sdp"-->
    <!--android:text="@string/labrl_signup_with_google" />-->

    <com.chatapp.common.CustomButton
        android:id="@+id/activity_login_btn_signup"
        style="@style/greybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/label_new_signup"
        app:font="@string/font_OpenSans_Regular" />
</LinearLayout>